Work in progress
* update default colors in config using new transparency color mechanism
* add skill selection popup(0x100) to panel masks

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -20,7 +20,7 @@ fps = -1
 ; 1-show map layer when in-game map is on
 ; 2-show map layer always
 show = 0
-; hide map layer when certain panels are opened, 0x7F=all panels
+; hide map layer when certain panels are opened, 0x1FF=all panels
 ;  0x01-inventory panel
 ;  0x02-character panel
 ;  0x04-skill-tree panel
@@ -29,7 +29,8 @@ show = 0
 ;  0x20-party panel
 ;  0x40-mercenary panel
 ;  0x80-waypoint panel
-panel_mask = 0xFF
+; 0x100-skill selection popup
+panel_mask = 0x1FF
 ; style for guide line
 ;  0-draw a short line with dot ahead to target (d2hackmap style)
 ;  1-draw a full line to target
@@ -57,7 +58,7 @@ map_centered = 1
 ; this is stacked with other color settings, for exampe:
 ;   while color = 128,128,128,128(alpha channel is 128), alpha = 160,
 ;   the drawn color alpha channel is: 128*160/255=80
-alpha = 170
+alpha = 255
 ; bounds(in piexls) for neighbour maps
 ; can be set to negative to indicate recursive depth,
 ;   e.g. -1 for show only nearby level maps
@@ -68,31 +69,31 @@ alpha = 170
 ;       disable it if you get performance impact
 neighbour_map_bounds = -1
 ; walkable area color (R,G,B) 0-255 for each channel, 0,0,0 = transparent
-walkable_color = 20,20,20
-; map edge color, set 0,0,0 to hide edge
-edge_color = 128,128,128
+walkable_color = 20,20,20,50
+; map edge color, set 0,0,0,0 to hide edge
+edge_color = 128,128,128,240
 ; text color
-text_color = 255,255,255
+text_color = 255,255,255,180
 ; colors for player pointer (inner/outer)
-player_inner_color = 255,128,128
-player_outer_color = 51,255,255
+player_inner_color = 255,128,128,80
+player_outer_color = 51,255,255,180
 ; color for guide lines
-line_color = 204,204,204
+line_color = 204,204,204,144
 ; colors for waypoints/portals/chests/quests/wells
-waypoint_color = 153,153,255
-portal_color = 255,255,102
-chest_color = 255,102,102
-quest_color = 102,102,255
-shrine_color = 255,51,178
-well_color = 51,51,255
+waypoint_color = 153,153,255,160
+portal_color = 255,255,102,160
+chest_color = 255,102,102,160
+quest_color = 102,102,255,160
+shrine_color = 255,51,178,160
+well_color = 51,51,255,160
 ; colors for monsters/unique monsters(including champions)/npcs
-monster_color = 255,0,0
-unique_monster_color = 192,166,130
-npc_color = 160,160,160
+monster_color = 255,0,0,128
+unique_monster_color = 192,166,130,204
+npc_color = 160,160,160,160
 ; color for doors
-door_color = 80,255,80
+door_color = 80,255,80,180
 ; message list background color
-msg_bg_color = 1,1,1
+msg_bg_color = 1,1,1,128
 ; message position (x,y,align)
 ; range of x and is [0.0,1.0], align can be 0(left), 1(centered), 2(right)
 msg_position = 0.95,0.25,2
@@ -122,12 +123,12 @@ show_items = 1
 ;  0 - not shown
 ;  1 - only NPCs/super-uniques/bosses/champions are shown
 ;  2 - common monsters and minions are also shown
-show_monsters = 1
+show_monsters = 2
 ; show monster's name, monsters must be shown in `show_monsters`
 ;  0 - not shown
 ;  1 - only NPCs/super-uniques/bosses/champions are shown
 ;  2 - common monsters and minions are also shown
-show_monster_names = 0
+show_monster_names = 1
 ; show monster's enchant including aura, check [enchants] section below, monsters must be shown in `show_monsters`
 ;  0 - not shown
 ;  1 - only NPCs/super-uniques/bosses/champions are shown
@@ -137,7 +138,7 @@ show_monster_enchants = 1
 ;  0 - not shown
 ;  1 - only NPCs/super-uniques/bosses/champions are shown
 ;  2 - common monsters and minions are also shown
-show_monster_immunities = 1
+show_monster_immunities = 2
 
 [enchants]
 ; strings can be tagged with color, in form '{n}', while n is taken from d2hackmap:
