--- a/contrib/D2RMH_CN.ini
+++ b/contrib/D2RMH_CN.ini
@@ -21,7 +21,7 @@ fps = -1
 ; 1-游戏内小地图打开时显示
 ; 2-总是显示
 show = 0
-; 当特定面板打开时隐藏本地图, 0x7F=所有面板
+; 当特定面板打开时隐藏本地图, 0x1FF=所有面板
 ;  0x01-物品面板
 ;  0x02-角色面板
 ;  0x04-技能树面板
@@ -30,7 +30,8 @@ show = 0
 ;  0x20-组队面板
 ;  0x40-雇佣兵面板
 ;  0x80-传送站面板
-panel_mask = 0x7F
+; 0x100-技能选择列表
+panel_mask = 0x1FF
 ; 路线指示画线方式
 ; 0-显示一条短线和一个点(d2hackmap的方式)
 ; 1-直接连接到目的地
@@ -52,8 +53,11 @@ scale = 2.0
 ; 0-静态地图
 ; 1-保持玩家显示在正中的动态地图
 map_centered = 1
-; 整个地图层的透明度(0-255)
-alpha = 170
+; 整个地图层的透明通道(0-255) 0为完全透明 255为完全不透明
+; 和其他颜色的透明通道叠加，例如:
+;   当颜色为 128,128,128,128(透明通道是128), alpha设为160时,
+;   绘制颜色的透明通道就是: 128*160/255=80
+alpha = 255
 ; 相邻地图边界(点阵为单位)
 ; 可以设为负数表示寻找相邻地图循环深度
 ;   例如 -1 表示只显示相邻地图
@@ -63,31 +67,31 @@ alpha = 170
 ;       请关闭此选项如果感受到较大的系统性能损失
 neighbour_map_bounds = -1
 ; 可行走部分的颜色 (R,G,B) 每个颜色范围是0-255, 0,0,0表示透明
-walkable_color = 20,20,20
-; 地图边缘的颜色
-edge_color = 128,128,128
+walkable_color = 20,20,20,50
+; 地图边缘的颜色 设为0,0,0,0隐藏边缘
+edge_color = 128,128,128,240
 ; 文字颜色
-text_color = 255,255,255
+text_color = 255,255,255,180
 ; 玩家方块的内外侧颜色
-player_inner_color = 255,128,128
-player_outer_color = 51,255,255
+player_inner_color = 255,128,128,80
+player_outer_color = 51,255,255,180
 ; 指示线颜色
-line_color = 204,204,204
+line_color = 204,204,204,144
 ; 路点/传送门/箱子/任务/神殿/井的颜色
-waypoint_color = 153,153,255
-portal_color = 255,255,102
-chest_color = 255,102,102
-quest_color = 102,102,255
-shrine_color = 255,51,178
-well_color = 51,51,255
+waypoint_color = 153,153,255,160
+portal_color = 255,255,102,160
+chest_color = 255,102,102,160
+quest_color = 102,102,255,160
+shrine_color = 255,51,178,160
+well_color = 51,51,255,160
 ; 怪物/金怪/npc的颜色
-monster_color = 255,0,0
-unique_monster_color = 192,166,130
-npc_color = 160,160,160
+monster_color = 255,0,0,128
+unique_monster_color = 192,166,130,204
+npc_color = 160,160,160,160
 ; 门的颜色
-door_color = 80,255,80
+door_color = 80,255,80,180
 ; 消息列表背景色
-msg_bg_color = 1,1,1
+msg_bg_color = 1,1,1,128
 ; 消息列表位置 (x,y,对齐)
 ; x和y的范围是[0.0,1.0], 对齐可以是0(左), 1(中), 2(右)
 msg_position = 0.95,0.25,2
@@ -115,12 +119,12 @@ show_items = 1
 ;  0 - 不显示
 ;  1 - 只有NPC/金怪/Boss会显示
 ;  2 - 普通和仆从怪也显示
-show_monsters = 1
+show_monsters = 2
 ; 显示怪物名，怪物需要先在`show_monsters`中设置显示
 ;  0 - 不显示
 ;  1 - 只有NPC/金怪/Boss会显示
 ;  2 - 普通和仆从怪也显示
-show_monster_names = 0
+show_monster_names = 1
 ; 显示怪物强化类型，包括光环，更多配置请看[enchants]部分，怪物需要先在`show_monsters`中设置显示
 ;  0 - 不显示
 ;  1 - 只有NPC/金怪/Boss会显示
@@ -130,7 +134,7 @@ show_monster_enchants = 1
 ;  0 - 不显示
 ;  1 - 只有NPC/金怪/Boss会显示
 ;  2 - 普通和仆从怪也显示
-show_monster_immunities = 1
+show_monster_immunities = 2
 
 [enchants]
 ; 各种强化对应显示的字符串
