Add a config option for delay between rendering actions

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -19,6 +19,11 @@ fps = -1
 ; 0-show map layer when in-game map is off
 ; 1-show map layer when in-game map is on
 ; 2-show map layer always
+render_delay = 50
+; value in milliseconds
+; the delay in rendering the next map update 
+; will help with GPU usage. Increase this if you notice framerate or GPU usage issue
+; set to 0 to disable (i.e. no delay in map update)
 show = 0
 ; hide map layer when certain panels are opened, 0x7F=all panels
 ;  0x01-inventory panel
