Plugin support work in progress
* import lua 5.4 and sol
* move dependencies into `deps` folder

--- a/deps/inih/CMakeLists.txt
+++ b/deps/inih/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(inih STATIC ini.c ini.h)
+add_library(inih STATIC EXCLUDE_FROM_ALL ini.c ini.h)
 target_compile_definitions(inih PRIVATE INI_ALLOW_NO_VALUE INI_CALL_HANDLER_ON_NEW_SECTION)
 target_include_directories(inih PUBLIC .)
 set_target_properties(inih PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
