--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if(MSVC)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /utf-8")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
 endif()
-add_subdirectory(inih)
+add_subdirectory(deps)
 add_subdirectory(d2mapapi)
 add_subdirectory(src)
 add_subdirectory(tools)
