--- a/bin/D2RMH_item.ini
+++ b/bin/D2RMH_item.ini
@@ -1,6 +1,7 @@
 [items]
 ; format:
 ;  <ID or Code>[+quality][*sockets][#ethereal]=style[,color,[sound]]
+;  ID or Code: check `ID` and `code` in doc/ItemDesc.md
 ;  quality: 0-low 1-normal 2-superior 3-magic 4-set 5-rare 6-unique 7-crafted
 ;  ethereal: 0 or 1
 ;  all other fields can be single value or range/list
