set default FPS value to 25, to reduce extra GPU consumption

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -15,7 +15,8 @@ language = enUS
 ;   0=No limit and Disable VSync
 ;  -1=Enable VSync(aka equal to video adapter fps),
 ;  -2=VSync with 2 frames per swap(aka video adapter fps/2), etc.
-fps = -1
+; Note: D2's logic is running at 25 frames per second, so this value is set to 25 by default
+fps = 25
 ; 0-show map layer when in-game map is off
 ; 1-show map layer when in-game map is on
 ; 2-show map layer always
