--- a/contrib/zhCN/D2RMH.ini
+++ b/contrib/zhCN/D2RMH.ini
@@ -16,7 +16,8 @@ language = zhTW
 ;   0=无限制并关闭垂直同步
 ;  -1=开启垂直同步，帧率和显示器刷新率相同
 ;  -2=开启垂直同步，帧率为显示器刷新率一半，依此类推
-fps = -1
+; 注意：D2的逻辑是每秒25帧，所以这个值默认设为25
+fps = 25
 ; 0-游戏内小地图关闭时显示
 ; 1-游戏内小地图打开时显示
 ; 2-总是显示
