git subrepo pull d2mapapi
subrepo:
  subdir:   "d2mapapi"
  merged:   "3677340"
upstream:
  origin:   "git@github.com:soarqin/d2mapapi_mod.git"
  branch:   "master"
  commit:   "3677340"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo.git"
  commit:   "b4ae8f1"

--- a/d2mapapi/CMakeLists.txt
+++ b/d2mapapi/CMakeLists.txt
@@ -18,6 +18,7 @@ endif()
 if(CMAKE_SIZEOF_VOID_P EQUAL 4)
     add_subdirectory(simphttp)
     add_library(d2mapapi STATIC EXCLUDE_FROM_ALL
+        crc32.h
         collisionmap.cpp collisionmap.h
         mapdata.cpp mapdata.h
         d2map.cpp d2map.h
