--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -78,10 +78,12 @@ text_color = 255,255,255,180
 ; colors for player pointer (inner/outer)
 player_inner_color = 255,128,128,80
 player_outer_color = 51,255,255,180
+non_party_player_inner_color = 255,128,128,80
+non_party_player_outer_color = 255,20,20,180
 ; color for guide lines
 line_color = 204,204,204,144
 ; colors for waypoints/portals/chests/quests/wells
-waypoint_color = 153,153,255,160
+waypoint_color = 153,153,255,200
 portal_color = 255,255,102,160
 chest_color = 255,102,102,160
 quest_color = 102,102,255,160
