--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -102,15 +102,22 @@ msg_bg_color = 1,1,1,128
 msg_position = 0.95,0.25,2
 ; show a text panel (updated every second), leave empty to disable
 ; usable patterns:
-;   {newline}    start a newline here
-;   {duration}   current game duration, shown as hh:mm:ss
-;   {time}       current system time in 24h style: hh:mm:ss
-;   {difficulty} current difficulty name
-;   {act}        current act name ('ACT I' to 'ACT V')
-;   {mapname}    current map name
+;   {newline}/{n} start a newline here
+;   {duration}    current game duration, shown as hh:mm:ss
+;   {time}        current system time in 24h clock format: hh:mm:ss
+;   {timea}       current system time in locale's 12h clock format
+;   {difficulty}  current difficulty name
+;   {act}         current act name ('ACT I' to 'ACT V')
+;   {mapname}     current map name
+;   {gamename}    current game name
+;   {gamepass}    current game password
+;   {region}      region code of the server which current game creates on
+;   {serverip}    ip address of the server which current game creates on
 text_panel_pattern =
 ;text_panel_pattern = {duration}
-;text_panel_pattern = {duration}{newline}{time}{newline}{difficulty}{newline}{act}-{mapname}
+;text_panel_pattern = {difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
+;text_panel_pattern = {gamename}{n}{gamepass}{n}{region} {serverip}{n}{difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
+
 ; text panel position, same as `msg_position`
 text_panel_position = 0.93,0.015,2
 
