--- a/contrib/zhCN/D2RMH.ini
+++ b/contrib/zhCN/D2RMH.ini
@@ -98,13 +98,21 @@ msg_bg_color = 1,1,1,128
 msg_position = 0.95,0.25,2
 ; 显示文字面板 (每秒更新)，留空则不显示
 ; 支持模板:
-;   {newline}    换行
-;   {duration}   当前游戏持续时间，显示为hh:mm:ss
-;   {time}       当前系统时间: hh:mm:ss
-;   {difficulty} 当前难度
-;   {act}        当前ACT ('ACT I' 到 'ACT V')
-;   {mapname}    当前地图名
-text_panel_pattern = {duration}
+;   {newline}/{n} 换行
+;   {duration}    当前游戏持续时间，显示为hh:mm:ss
+;   {time}        当前系统时间: hh:mm:ss
+;   {difficulty}  当前难度
+;   {act}         当前ACT ('ACT I' 到 'ACT V')
+;   {mapname}     当前地图名
+;   {gamename}    当前游戏房间名
+;   {gamepass}    当前游戏房间密码
+;   {region}      游戏服务器所处区域代码
+;   {serverip}    游戏服务器IP地址
+text_panel_pattern =
+;text_panel_pattern = {duration}
+;text_panel_pattern = {difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
+;text_panel_pattern = {gamename}{n}{gamepass}{n}{region} {serverip}{n}{difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
+
 ; 面板位置, 同 `msg_position`
 text_panel_position = 0.93,0.015,2
 
