Work in progress
* add simple BFS path finding to d2mapapi_mod, as well as required data generated for path finding function.
* change `full_line` to `line_style` in D2RMH.ini, and you can set it to 2 for displaying walkable path to target through new path finding functions.

--- a/contrib/zhCN/D2RMH.ini
+++ b/contrib/zhCN/D2RMH.ini
@@ -36,7 +36,8 @@ panel_mask = 0x1FF
 ; 路线指示画线方式
 ; 0-显示一条短线和一个点(d2hackmap的方式)
 ; 1-直接连接到目的地
-full_line = 0
+; 2-通向目的地的行走路径(消耗更多CPU资源)
+line_style = 0
 ; 0-左上
 ; 1-右上
 ; 2-正中
