--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -35,7 +35,8 @@ panel_mask = 0x1FF
 ; style for guide line
 ;  0-draw a short line with dot ahead to target (d2hackmap style)
 ;  1-draw a full line to target
-full_line = 0
+;  2-draw walk-path to target in lines(more CPU usage)
+line_style = 0
 ; 0-top left
 ; 1-top right
 ; 2-center
