Work in progress
* refactoring TTF rendering to fix glitches on text display
* add `object_size_minimal` to D2RMH.ini for minimal size of object quads

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -128,6 +128,8 @@ show_player_names = 1
 show_npc_names = 1
 ; show in-memory nearby objects(currently only shrines)
 show_objects = 1
+; minimal size of objects in pixels (except doors)
+object_size_minimal = 6
 ; show in-memory nearby items on ground, check D2RMH_item.ini for filter settings
 show_items = 1
 ; show in-memory nearby monsters
