add `draw_on_game_bar` to D2RMH.ini

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -21,6 +21,8 @@ fps = 25
 ; 1-show map layer when in-game map is on
 ; 2-show map layer always
 show = 0
+; set this to 0 if you don't wanna map drawn on bottom game bar
+draw_on_game_bar = 1
 ; hide map layer when certain panels are opened, 0x1FF=all panels
 ;  0x01-inventory panel
 ;  0x02-character panel
