--- a/contrib/zhCN/D2RMH.ini
+++ b/contrib/zhCN/D2RMH.ini
@@ -22,6 +22,8 @@ fps = 25
 ; 1-游戏内小地图打开时显示
 ; 2-总是显示
 show = 0
+; 如果不想地图覆盖到底部游戏UI条请设为0
+draw_on_game_bar = 0
 ; 当特定面板打开时隐藏本地图, 0x1FF=所有面板
 ;  0x01-物品面板
 ;  0x02-角色面板
@@ -123,6 +125,8 @@ show_player_names = 1
 show_npc_name = 1
 ; 显示附近物件(目前显示神殿和井)
 show_objects = 1
+; 地图上物件(门除外)的最小尺寸(按点阵)
+object_size_minimal = 6
 ; 显示附近的物品掉落，可以修改D2RMH_item.ini设定自己的掉落过滤表
 show_items = 1
 ; 显示附近的怪物
