support D2/D2R's TBL/DC6 font, as well as refactoring TTF rendering to suite fonts with fixed pixel size

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -3,6 +3,11 @@
 ; if not found in this path, D2RMH will fallback to read installation path from registry.
 d2_path = .
 ; font settings
+;   you can use TTF(with .ttf or .ttc extension), or TBL/DC6 from D2/D2R
+; 1. for TTF font, just put full path in `font_file_path`
+; 2. for TBL/DC6 font, you should put 3 files: base.dc6, base.tbl, base.pal(you can get it from data\global\palette\fechar\pal.dat and rename it),
+;    and put the full path of any of the file in `font_file_path`, you can also append original font size separated by `|` if it does not match `font_size`.
+;   for example: font_file_path = font24.dc6|24
 font_file_path = C:\Windows\Fonts\Arial.ttf
 font_size = 14
 ; font size for message list
