--- a/contrib/zhCN/D2RMH.ini
+++ b/contrib/zhCN/D2RMH.ini
@@ -5,6 +5,11 @@ d2_path = .
 ; 字体路径
 font_file_path = C:\Windows\Fonts\SimHei.ttf
 ; 文字字体大小
+;   你可以使用TTF(扩展名为.ttf或.ttc), 以及D2/D2R的TBL/DC6字体
+; 1. 对于TTF字体，在 `font_file_path` 里放路径
+; 2. 对于TBL/DC6字体, 你需要放3个文件: base.dc6, base.tbl, base.pal(将data\global\palette\fechar\pal.dat复制出来改名),
+;    并将任何一个文件的路径设置在 `font_file_path` 里, 你还可以在后面用 `|` 分隔追加原字体大小，如果和 `font_size` 不一致
+;   举例: font_file_path = font24.dc6|24
 font_size = 14
 ; 消息列表字体大小
 msg_font_size = 24
