Work in progress
* update year in LICENSE's
* put licenses of dependencies in zip packages
* update CascLib to latest HEAD
* move CascLib to deps folder
* can load fonts from D2R Casc Storage now, and is the default option in D2RMH.ini now
* add option `USE_FREETYPE` to cmake build system which enables rendering TrueType fonts using FreeType

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,10 @@ endif()
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 include(CustomCompilerOptions)
+fix_compile_flags()
 fix_release_flags()
 add_static_runtime_option()
 
-if(MSVC)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /utf-8")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
-endif()
 add_subdirectory(deps)
 add_subdirectory(d2mapapi)
 add_subdirectory(src)
