--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -2,17 +2,27 @@
 ; path to your Diablo II LOD v1.13c.
 ; if not found in this path, D2RMH will fallback to read installation path from registry.
 d2_path = .
-; font settings
-;   you can use TTF(with .ttf or .ttc extension), or TBL/DC6 from D2/D2R
-; 1. for TTF font, just put full path in `font_file_path`
-; 2. for TBL/DC6 font, you should put 3 files: base.dc6, base.tbl, base.pal(you can get it from data\global\palette\fechar\pal.dat and rename it),
-;    and put the full path of any of the file in `font_file_path`, you can also append original font size separated by `|` if it does not match `font_size`.
-;   for example: font_file_path = font24.dc6|24
-font_file_path = C:\Windows\Fonts\Arial.ttf
+; font settings, you can:
+; 1. use TTF inside D2R Casc Storage, supported fonts:
+;    All languages (especially koKR, ruRU, zhCN):
+;      blizzardglobal-v5_81.ttf(default)
+;    zhTW:
+;      blizzardglobaltcunicode.ttf(default), arfangxinshuh7c95b5_eb_t.ttf
+;    jaJP:
+;      bljap_v8_3.ttf(default), ik4ll3.ttf, tbgdb_0pp.ttf
+;    enUS, deDE, plPL and other latin languages:
+;      formal436bt.ttf(default), exocetblizzardot-medium.otf, irisl.ttf, kodia.ttf, philosopher-bolditalic.ttf
+;    leave empty to use default font
+; 2. use external TTF(with .ttf or .ttc extension), or TBL/DC6 from D2/D2R
+;    a) for TTF font, just put full path in `font_file_path`
+;    b) for TBL/DC6 font, you should put 3 files: base.dc6, base.tbl, base.pal(you can get it from data\global\palette\fechar\pal.dat and rename it),
+;       and put the full path of any of the file in `font_file_path`, you can also append original font size separated by `|` if it does not match `msg_font_size`.
+;       for example: font_file_path = font24.dc6|24
+font_file_path =
 font_size = 14
 ; font size for message list
 msg_font_size = 24
-; can be: enUS,deDE,esES,frFR,itIT,koKR,plPL,esMX,jpJP,ptBR,ruRU,zhTW,zhCN
+; can be: enUS,deDE,esES,frFR,itIT,koKR,plPL,esMX,jaJP,ptBR,ruRU,zhTW,zhCN
 language = enUS
 
 [ui]
