--- a/deps/CascLib/CMakeLists.txt
+++ b/deps/CascLib/CMakeLists.txt
@@ -57,7 +57,7 @@ set(ZLIB_FILES
     )
 
 add_library(casc STATIC EXCLUDE_FROM_ALL ${SRC_FILES} ${HEADER_FILES} ${ZLIB_FILES})
-target_compile_definitions(casc PRIVATE _7ZIP_ST BZ_STRICT_ANSI PUBLIC _UNICODE UNICODE)
+target_compile_definitions(casc PUBLIC CASCLIB_NO_AUTO_LINK_LIBRARY _UNICODE UNICODE PRIVATE STRSAFE_NO_DEPRECATE)
 target_include_directories(casc PUBLIC src)
 target_link_libraries(casc ws2_32)
 set_target_properties(casc PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
