--- a/contrib/zhCN/D2RMH.ini
+++ b/contrib/zhCN/D2RMH.ini
@@ -4,12 +4,22 @@
 d2_path = .
 ; 字体路径
 font_file_path = C:\Windows\Fonts\SimHei.ttf
-; 文字字体大小
-;   你可以使用TTF(扩展名为.ttf或.ttc), 以及D2/D2R的TBL/DC6字体
-; 1. 对于TTF字体，在 `font_file_path` 里放路径
-; 2. 对于TBL/DC6字体, 你需要放3个文件: base.dc6, base.tbl, base.pal(将data\global\palette\fechar\pal.dat复制出来改名),
-;    并将任何一个文件的路径设置在 `font_file_path` 里, 你还可以在后面用 `|` 分隔追加原字体大小，如果和 `font_size` 不一致
-;   举例: font_file_path = font24.dc6|24
+; 文字字体大小，你可以：
+; 1. 使用D2R自带的TTF，支持以下字体:
+;    所有语言 (尤其是 koKR, ruRU, zhCN):
+;      blizzardglobal-v5_81.ttf(默认)
+;    zhTW:
+;      blizzardglobaltcunicode.ttf(默认), arfangxinshuh7c95b5_eb_t.ttf
+;    jaJP:
+;      bljap_v8_3.ttf(默认), ik4ll3.ttf, tbgdb_0pp.ttf
+;    enUS, deDE, plPL 以及其他拉丁语系语言:
+;      formal436bt.ttf(默认), exocetblizzardot-medium.otf, irisl.ttf, kodia.ttf, philosopher-bolditalic.ttf
+;    留空会使用默认字体
+; 2. 使用TTF(扩展名为.ttf或.ttc), 以及D2/D2R的TBL/DC6字体
+;    a. 对于TTF字体，在 `font_file_path` 里放路径
+;    b. 对于TBL/DC6字体, 你需要放3个文件: base.dc6, base.tbl, base.pal(将data\global\palette\fechar\pal.dat复制出来改名),
+;       并将任何一个文件的路径设置在 `font_file_path` 里, 你还可以在后面用 `|` 分隔追加原字体大小，如果和 `msg_font_size` 不一致
+;       举例: font_file_path = font24.dc6|24
 font_size = 14
 ; 消息列表字体大小
 msg_font_size = 24
