--- a/d2mapapi/CMakeLists.txt
+++ b/d2mapapi/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 if ("${CMAKE_SOURCE_DIR}" STREQUAL "${PROJECT_SOURCE_DIR}")
     list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
     include(CustomCompilerOptions)
+    fix_compile_flags()
     fix_release_flags()
     add_static_runtime_option()
 endif()
