Work in progress
* Fix D2R Casc Storage initialization for x64 targets
* Load all data from D2R Casc Storage directly now, so `gendata` is removed

--- a/bin/D2RMH_gamedata.ini
+++ b/bin/D2RMH_gamedata.ini
@@ -59,6 +59,7 @@ guide[Travincal][Durance of Hate Level 1]                   =1
 guide[Durance of Hate Level 1][Durance of Hate Level 2]     =1
 guide[Durance of Hate Level 2][Durance of Hate Level 3]     =1
 ;Act4:
+guide[Outer Steppes][Plains of Despair]                     =1
 guide[Plains of Despair][-256]                              =1
 guide[City of the Damned][River of Flame]                   =1
 guide[River of Flame][+376]                                 =1
