read language of D2R from registry if `language` is left empty in D2RMH.ini, and it is the default value now

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -23,7 +23,8 @@ font_size = 14
 ; font size for message list
 msg_font_size = 24
 ; can be: enUS,deDE,esES,frFR,itIT,koKR,plPL,esMX,jaJP,ptBR,ruRU,zhTW,zhCN
-language = enUS
+; leave empty to use D2R language settings
+language =
 
 [ui]
 ; Positive value will limit FPS to certain value, negative value will change OpenGL context swap interval:
