--- a/contrib/zhCN/D2RMH.ini
+++ b/contrib/zhCN/D2RMH.ini
@@ -23,8 +23,9 @@ font_file_path = C:\Windows\Fonts\SimHei.ttf
 font_size = 14
 ; 消息列表字体大小
 msg_font_size = 24
-; can be: enUS,deDE,esES,frFR,itIT,koKR,plPL,esMX,jpJP,ptBR,ruRU,zhTW,zhCN
-language = zhTW
+; 可选语言: enUS,deDE,esES,frFR,itIT,koKR,plPL,esMX,jpJP,ptBR,ruRU,zhTW,zhCN
+; 留空则使用 D2R 当前语言设置
+language =
 
 [ui]
 ; 帧数限制，正数表示限制帧率，负数表示垂直同步交换间隔：
