--- a/src/res/res.rc
+++ b/src/res/res.rc
@@ -2,10 +2,10 @@
 
 #include "winres.h"
 
-101 DIALOG DISCARDABLE  0, 0, 240, 155
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+101 DIALOGEX 0, 0, 240, 155
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU | DS_SHELLFONT
 CAPTION "About D2RMH"
-FONT 10, "Arial Bold"
+FONT 12, "MS Shell Dlg", 800
 BEGIN
     LTEXT           "D2RMH",1000,20,20,200,20,SS_CENTER
     LTEXT           "a map revealing tool for Diablo II Resurrected",IDC_STATIC,20,45,200,10,SS_CENTER
@@ -13,4 +13,12 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,100,128,40,12
     CONTROL         "Project page: <a href=""https://github.com/soarqin/D2RMH"">https://github.com/soarqin/D2RMH</a>",1001,"SysLink",WS_TABSTOP,20,90,200,10
     CONTROL         "New releases: <a href=""https://github.com/soarqin/D2RMH/releases"">https://github.com/soarqin/D2RMH/releases</a>",1002,"SysLink",WS_TABSTOP,20,105,200,10
+END
+
+102 DIALOG DISCARDABLE 0, 0, 1, 1
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Configuration"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,0,0,1,1
+    PUSHBUTTON      "Cancel",IDCANCEL,0,0,1,1
 END
