Work in progress
* update codes to support v1.2.69324
* remove {serverip} and add {season} to text pattern

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -131,11 +131,11 @@ msg_position = 0.95,0.25,2
 ;   {gamename}    current game name
 ;   {gamepass}    current game password
 ;   {region}      region code of the server which current game creates on
-;   {serverip}    ip address of the server which current game creates on
+;   {season}      current battle.net season string
 text_panel_pattern =
 ;text_panel_pattern = {duration}
 ;text_panel_pattern = {difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
-;text_panel_pattern = {gamename}{n}{gamepass}{n}{region} {serverip}{n}{difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
+;text_panel_pattern = {gamename}{n}{gamepass}{n}{region} {season}{n}{difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
 
 ; text panel position, same as `msg_position`
 text_panel_position = 0.93,0.015,2
