fix map display after party window opened in multiplayer games

--- a/contrib/zhCN/D2RMH.ini
+++ b/contrib/zhCN/D2RMH.ini
@@ -126,11 +126,11 @@ msg_position = 0.95,0.25,2
 ;   {gamename}    当前游戏房间名
 ;   {gamepass}    当前游戏房间密码
 ;   {region}      游戏服务器所处区域代码
-;   {serverip}    游戏服务器IP地址
+;   {season}      当前游戏赛季
 text_panel_pattern =
 ;text_panel_pattern = {duration}
 ;text_panel_pattern = {difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
-;text_panel_pattern = {gamename}{n}{gamepass}{n}{region} {serverip}{n}{difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
+;text_panel_pattern = {gamename}{n}{gamepass}{n}{region} {season}{n}{difficulty}{n}{act}-{mapname}{n}{time}{n}{duration}
 
 ; 面板位置, 同 `msg_position`
 text_panel_position = 0.93,0.015,2
