--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -1,5 +1,5 @@
 [main]
-; path to your Diablo II LOD v1.13c.
+; path to your Diablo II LOD.
 ; if not found in this path, D2RMH will fallback to read installation path from registry.
 d2_path = .
 ; font settings, you can:
